<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:fillViewport="true">
    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        tools:context="alostacos.juegos.atletismo.alostacos.vista.EntrenamientoActivity$PlaceholderFragment"
        android:id="@+id/contenedor">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtNombre"
            android:text="gfghfdgfdg"
            android:layout_alignParentTop="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/marginBot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:id="@+id/txtNivel"
            android:text="@string/nivel_atleta"
            android:layout_alignParentTop="true"
            android:layout_alignRight="@+id/conPrin"
            android:layout_alignEnd="@+id/conPrin"
            android:layout_marginBottom="@dimen/marginBot" />

        <TextView
            android:id="@+id/txtTipoEntrenamiento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="tipo entrenamiento"
            android:layout_below="@+id/txtNombre"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_marginBottom="@dimen/marginBot" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:text="@string/label_puntos"
            android:id="@+id/textView"
            android:layout_alignTop="@+id/txtEnergia"
            android:layout_toLeftOf="@+id/txtEnergia"
            android:layout_toStartOf="@+id/txtEnergia"
            android:layout_marginBottom="@dimen/marginBot" />

        <TextView
            android:id="@+id/txtEnergia"
            android:layout_width="@dimen/botonPuntuacion"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceLarge"
            android:layout_above="@+id/conPrin"
            android:layout_alignRight="@+id/conPrin"
            android:layout_alignEnd="@+id/conPrin"
            android:layout_marginBottom="@dimen/marginBot"
            android:layout_marginLeft="@dimen/marginBot"
            android:gravity="end" />

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:id="@+id/conPrin"
            android:layout_below="@+id/txtTipoEntrenamiento"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:paddingBottom="@dimen/padBot">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="fill_parent"
                    android:id="@+id/conVer"
                    android:layout_height="wrap_content">
                </LinearLayout>

                <Button
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/entrenar"
                    android:id="@+id/btnEntrenar"
                    android:layout_gravity="center_horizontal"
                    android:layout_marginTop="@dimen/marginBot" />
        </LinearLayout>

    </RelativeLayout>
</ScrollView>